# counseling-feedback

./: .gitignore  README.md  pyproject.toml
cs224n-project/: llama3-1-classifier.ipynb  requirements.txt  skill_validation_results.json  validate_has_skill.py
cs224n-project/Reflections-Questions/: PAIR_model.py  create_data.py  cross_scorer_model.py  has-reflection.py  validate_empathy.py  validate_skill.py
cs224n-project/Reflections-Questions/Finetuning/: finetune.py  finetune_modal.py  requirements.txt
cs224n-project/SetFit+DeBERTa/: create_data.py  has_skill.py
cs224n-project/SetFit+DeBERTa/finetune/: finetune.py
cs224n-project/SetFit+DeBERTa/validate/: validate.py
cs224n-project/finetune/: finetune.py
cs224n-project/mDeBERTa-v3-base-mnli-xnli/: validate_has_skill.py
cs224n-project/mDeBERTa-v3-base-mnli-xnli/finetune/: finetune.py
cs224n-project/serverless_code/: finetune.py  validate.py
model_training/: dpo_llama.py  finetune_llama.py  generate_llama_exp.py  generate_llama_exp_probs.py  pyproject.toml  split_dataset.py
model_training/data/feedback_qes_conv_processed/: test.json  train.json
